syntax = "proto3";

package robobuf;

message DisplayState {
    uint32 background_color = 1;
    optional string image = 2;
    uint32 x = 3;
    uint32 y = 4;
    uint32 brightness = 5;
}